<resources>
    //App Name
    <string name="app_name">expenseManagement</string>

    //Drawer Navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_listOfMovements">List of movements</string>
    <string name="menu_reportsByDate">Reports by date</string>

    <string name="title_home">Home</string>
    <string name="title_listOfMovements">List of movements</string>

    <string name="title_activity_new_movement">NewMovementActivity</string>

    //Toolbar
    <string name="action_settings">Settings</string>
    <string name="nav_card">CARD</string>
    <string name="nav_cash">CASH</string>
    <string name="nav_saving">SAVING</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Movement types
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="all">All</string>

    //Account names
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="saving">Saving</string>
    <string name="allAccounts">All accounts</string>

    //Month array
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    //Accounts array
    <string-array name="accounts_array">
        <item>Card</item>
        <item>Cash</item>
        <item>Saving</item>
    </string-array>

    //Income category array
    <string-array name="income_category_array">
        <item>Loans</item>
        <item>Wages</item>
        <item>Sales</item>
    </string-array>

    //Expense category array
    <string-array name="expense_category_array">
        <item>Animals</item>
        <item>Others</item>
        <item>Drinks</item>
        <item>Education</item>
        <item>Gasoline</item>
        <item>Fun</item>
        <item>Hotel</item>
        <item>Goods</item>
        <item>Food</item>
        <item>Staff</item>
        <item>Tips</item>
        <item>Toll</item>
        <item>Restaurant</item>
        <item>Health</item>
        <item>Transport</item>
        <item>Clothing</item>
    </string-array>

    //All categories
    <string-array name="all_categories_array">
        <item>Animals</item>
        <item>Others</item>
        <item>Drinks</item>
        <item>Education</item>
        <item>Gasoline</item>
        <item>Fun</item>
        <item>Hotel</item>
        <item>Goods</item>
        <item>Food</item>
        <item>Staff</item>
        <item>Tips</item>
        <item>Toll</item>
        <item>Restaurant</item>
        <item>Health</item>
        <item>Transport</item>
        <item>Clothing</item>
        <item>Loans</item>
        <item>Wages</item>
        <item>Sales</item>
        <item>Transfer</item>
    </string-array>

    //Transfer category
    <string-array name="transfer_category">
        <item>Transfer</item>
    </string-array>

    //Movement types array
    <string-array name="movement_types_array">
        <item>All</item>
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    //Durations array
    <string-array name="durations_array">
        <item>Per day</item>
        <item>By period</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

</resources>