<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ma.ensaj.expensemanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"

        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_listOfMovements"
        android:name="ma.ensaj.expensemanagement.ui.listOfMovements.ListOfMovementsFragment"
        android:label="@string/menu_listOfMovements"
        tools:layout="@layout/fragment_list_of_movements" />

    <fragment
        android:id="@+id/nav_reportsByDate"
        android:name="ma.ensaj.expensemanagement.ui.reportsByDate.ReportsByDateFragment"
        android:label="@string/menu_reportsByDate"
        tools:layout="@layout/fragment_reports_by_date" />
</navigation>