<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/filter_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/card_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:layout_height="40dp">

            <Spinner
                android:background="@drawable/spinner_state"
                android:id="@+id/month"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:gravity="center"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:background="@drawable/spinner_state"
                android:id="@+id/year"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                style="@android:style/Widget.Holo.Light.Spinner"/>
        </LinearLayout>

        <Spinner
            android:background="@drawable/spinner_state"
            android:id="@+id/account"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:spinnerMode="dropdown"
            style="@android:style/Widget.Holo.Light.Spinner"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/checkbox_group"
            android:orientation="horizontal"
            android:background="@drawable/checkboxe_group_background"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/card"
                android:layout_marginHorizontal="10dp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"/>
            <CheckBox
                android:id="@+id/cash"
                android:layout_marginHorizontal="10dp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"/>
            <CheckBox
                android:id="@+id/saving"
                android:layout_marginHorizontal="10dp"
                android:textColor="?attr/colorOnPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving"/>
        </LinearLayout>

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@drawable/radio_group_background"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:id="@+id/movement"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/income"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:text="@string/income" />
            <RadioButton
                android:id="@+id/expense"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="?attr/colorSecondary"
                android:layout_height="wrap_content"
                android:text="@string/expense" />
            <RadioButton
                android:id="@+id/transfer"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="?attr/colorSecondary"
                android:layout_height="wrap_content"
                android:text="@string/transfer" />
            <RadioButton
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSecondary"
                android:text="@string/all" />
        </RadioGroup>

        <Spinner
            android:background="@drawable/spinner_state"
            android:id="@+id/income_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="22dp"
            android:visibility="gone"
            android:spinnerMode="dropdown"
            style="@android:style/Widget.Holo.Light.Spinner"/>

        <Spinner
            android:background="@drawable/spinner_state"
            android:id="@+id/expense_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:spinnerMode="dropdown"
            android:layout_marginHorizontal="22dp"
            style="@android:style/Widget.Holo.Light.Spinner"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listOfMovements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/newIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:tint="@color/green"
                android:layout_gravity="end"
                app:borderWidth="0dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                app:srcCompat="@drawable/ic_action_add"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/newExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    app:tint="@color/red"
                    app:borderWidth="0dp"
                    android:backgroundTint="?attr/colorPrimaryVariant"
                    app:srcCompat="@drawable/ic_action_minus" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/newTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    app:tint="@color/blue"
                    app:borderWidth="0dp"
                    android:backgroundTint="?attr/colorPrimaryVariant"
                    app:srcCompat="@drawable/ic_action_transfer" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp"
            android:layout_gravity="bottom|start">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ascendant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:tint="@color/dark_yellow"
                android:layout_gravity="end"
                app:borderWidth="0dp"
                android:backgroundTint="@color/black"
                app:srcCompat="@drawable/ic_ascendant_sort"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/descendant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:tint="@color/dark_yellow"
                app:borderWidth="0dp"
                android:backgroundTint="@color/black"
                app:srcCompat="@drawable/ic_descendant_sort" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/current_sold_state"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start">

            <TextView
                android:id="@+id/current_sold"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="25dp"
                android:text="875 DHS"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>